<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/_game_over"
        app:layout_constraintBottom_toTopOf="@id/tv_rec_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat = "@drawable/ic_happy"
        />

    <TextView
        android:id="@+id/tv_rec_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/_rec_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_score_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_rec_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_rec_answers"
        app:layout_constraintStart_toStartOf="@id/tv_rec_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_rec_answers" />

    <TextView
        android:id="@+id/tv_rec_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_rec_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_rec_answers"
        app:layout_constraintStart_toStartOf="@id/tv_rec_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_score_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_rec_answers"
        app:layout_constraintStart_toStartOf="@id/tv_rec_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_rec_percentage"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/but_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_retry"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>