<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/_tv_timer"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sum"
        style="@style/QuestionTextStyle"
        android:layout_width="144dp"
        android:layout_height="144dp"


        android:background="@drawable/circle_back2"

        android:text="@string/_sum"
        app:layout_constraintBottom_toTopOf="@+id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_left_number"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        android:background="@color/teal_700"
        android:text="@string/_left_number"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/tv_question"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sum" />

    <TextView
        android:id="@+id/tv_question"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@color/teal_700"
        android:text="@string/_question_mark"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_number"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_number"
        app:layout_constraintTop_toTopOf="@+id/tv_left_number" />

    <TextView
        android:id="@+id/tv_option_1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@color/holo_green_light"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_option_2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/holo_green_orange"
        android:text="2"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintStart_toEndOf="@+id/tv_option_4" />

    <TextView
        android:id="@+id/tv_option_3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/holo_green_violet"
        android:text="3"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_option_5" />

    <TextView
        android:id="@+id/tv_option_4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/holo_green_blue"
        android:text="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_option_5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/holo_green_red"
        android:text="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintStart_toEndOf="@+id/tv_option_4" />

    <TextView
        android:id="@+id/tv_option_6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/holo_green_skyblue"
        android:text="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_option_5" />

    <TextView
        android:id="@+id/tv_answers_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/_progress_answers"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@id/tv_left_number"
        app:layout_constraintVertical_chainStyle="spread" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:secondaryProgressTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@id/tv_option_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_answers_progress" />


</androidx.constraintlayout.widget.ConstraintLayout>